[project]
name = "product-company-job-hunter"
version = "0.1.0"
description = ""
authors = [
    {name = "Ganesh Datta",email = "ganeshdattapadamata@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "google-adk (>=1.31.1,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
